--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-# Project dependencies
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
-node_modules
-.cache/
-# Build directory
-public/
+*.log
 .DS_Store
-yarn-error.log
+node_modules
+.cache
+dist
